# objectsensitivetyping

objectsensitivetyping/: README.md  Setup.hs  analyses.cabal  build-tables  lowerarray.cpp  lowerarray.la  lowerarray.lo  lowertarget.cpp  lowertarget.la  lowertarget.lo  nativeAPI.txt  postashred.cpp  postashred.la  postashred.lo  postsua.cpp  postsua.la  postsua.lo  preashred.backup  preashred.cpp  preashred.la  preashred.lo  presua.cpp  presua.la  presua.lo  simplifier  simplify.cpp  simplify.la  simplify.lo  stripattributes.la  stripattributes.lo  uuagc_options
objectsensitivetyping/.libs/: lowerarray.la  lowerarray.lai  lowerarray.so.0.0.0  lowertarget.la  lowertarget.lai  lowertarget.so.0  lowertarget.so.0.0.0  postashred.la  postashred.lai  postashred.so.0  postashred.so.0.0.0  postsua.la  postsua.lai  postsua.so.0  postsua.so.0.0.0  preashred.la  preashred.lai  preashred.so.0  preashred.so.0.0.0  presua.la  presua.lai  presua.so.0.0.0  simplify.la  simplify.lai  simplify.so.0  simplify.so.0.0.0  stripattributes.la  stripattributes.lai
objectsensitivetyping/lib/cco-0.0.4/: cco.cabal  compile
objectsensitivetyping/projects/dijkstra/: log.txt  source.php  source.php-instrumented
objectsensitivetyping/projects/floyd/: log.txt  simplified.php  source.php  source.php-instrumented
objectsensitivetyping/projects/gaufrette/: log.txt  modification.txt  source.php  source.php-instrumented
objectsensitivetyping/projects/interpreter/: log.txt  source.php  source.php-instrumented
objectsensitivetyping/projects/mime/: log.txt  source.php  source.php-instrumented
objectsensitivetyping/projects/mvc/: error.tpl  log.txt  login.tpl  message.tpl  source.php  source.php-instrumented
objectsensitivetyping/projects/phpgeo/: log.txt  source.php  source.php-instrumented
objectsensitivetyping/projects/raytracer/: modifications.txt  source.php  source.php-instrumented
objectsensitivetyping/src/: App.hs  AppAction.hs  AppConfig.hs  Benchmark.hs  Exception.hs  Main.hs  Metric.hs  Precision.hs  ResultTable.hs  Test.hs
objectsensitivetyping/src/Analysis/: Coerce.hs  Filterable.hs  Identifier.hs  Index.hs  Inject.hs  ProgramState.hs  Resource.hs  SensitivitySpec.hs  Type.hs  Typing.hs
objectsensitivetyping/src/Framework/: Lattice.hs  Program.hs  Solve.hs
objectsensitivetyping/src/Metric/: Common.hs
objectsensitivetyping/src/Native/: Inference.hs  NativeAPI.hs  NativeType.txt  ToValue.hs
objectsensitivetyping/src/PHP/: IR.ag  Interface.hs  Parser.hs
objectsensitivetyping/src/Test/: Parser.hs
objectsensitivetyping/tests/: -instrumented  all  all.txt  assign.php  assign.php-instrumented  assignop.php  assignop.php-instrumented  coercions.php  coercions.php-instrumented  define.php  define.php-instrumented  echo.php-instrumented  errors.txt  foo.txt  log.txt  nonmonotomic.php  nonmonotomic.php-instrumented  osta4php.aux  osta4php.hp  osta4php.prof  osta4php.ps  osta4php_successfull.prof  preposdecrement.php-instrumented  preposincrement.php-instrumented  simple.php-instrumented  test  test.php-instrumented  tmp.php  tmp.php-instrumented
objectsensitivetyping/tests/basicdatatypes/: casts.php  casts.php-instrumented  log.txt  typejuggling.php  typejuggling.php-instrumented
objectsensitivetyping/tests/controlstruct/: conditional.php  conditional.php-instrumented  dowhile.php  dowhile.php-instrumented  dowhilebreak.php  dowhilebreak.php-instrumented  elseif.php  elseif.php-instrumented  exit.php  exit.php-instrumented  for.php  for.php-instrumented  foreach.php  foreach.php-instrumented  if.php-instrumented  ifelse.php-instrumented  log.txt  switch.php  switch.php-instrumented  ternaryconditionalop.php  ternaryconditionalop.php-instrumented  while.php  while.php-instrumented  while2.php  while2.php-instrumented
objectsensitivetyping/tests/exceptions/: childexception.php  childexception.php-instrumented  exception.php  exception.php-instrumented  keepstacksvariableafterexception.php  keepstacksvariableafterexception.php-instrumented  log.txt  nestedexception.php  nestedexception.php-instrumented  parentconstructor.php  parentconstructor.php-instrumented  returnvalues.php  returnvalues.php-instrumented  uncaughtexception.php  uncaughtexception.php-instrumented
objectsensitivetyping/tests/functions/: fac.php  fac.php-instrumented  funfun.php-instrumented  funretref.php-instrumented  funtakesarray.php-instrumented  id.php-instrumented  id2.php-instrumented  log.txt  optionalparameter.php  optionalparameter.php-instrumented  optionalparameterwitharray.php  optionalparameterwitharray.php-instrumented  recursive.php  recursive.php-instrumented  recursive2.php  recursive2.php-instrumented  simple.php  simple.php-instrumented  simplewitharg.php  simplewitharg.php-instrumented  static.php-instrumented
objectsensitivetyping/tests/native/: arrayfunction.php  arrayfunction.php-instrumented  arraypush.php  arraypush.php-instrumented  constant.php  constant.php-instrumented  emptyarray.php  emptyarray.php-instrumented  explode.php  explode.php-instrumented  function.php  function.php-instrumented  jsondecode.php  jsondecode.php-instrumented  log.txt  nativeclassconstant.php  nativeclassconstant.php-instrumented  nativefield.php  nativefield.php-instrumented  nativemethod.php  nativemethod.php-instrumented  outputparameters.php  outputparameters.php-instrumented  property.php  property.php-instrumented
objectsensitivetyping/tests/oo/: caseinsensitive.php  caseinsensitive.php-instrumented  classconstant.php  classconstant.php-instrumented  compoundarguments.php  compoundarguments.php-instrumented  constructor.php  constructor.php-instrumented  defaultconstructor.php  defaultconstructor.php-instrumented  defaultfieldvalue.php  defaultfieldvalue.php-instrumented  fields.php  fields.php-instrumented  fieldwitharrays.php  fieldwitharrays.php-instrumented  implicitconstructor.php  implicitconstructor.php-instrumented  implicitfieldread.php  instanceof.php  (+35 more)
osta4php-table-builder/: osta4php-table-builder.cabal  performance.txt
osta4php-table-builder/src/: Main.hs  Printing.hs  Types.hs
(+194 files in other folders)
