Name:               analyses
Version:            1.0
Cabal-Version:      >= 1.18.1.2
Author:             Henk Erik van der Hoek
Synopsis:           Object Sensitive Type Analysis 4 PHP
Description:        Object Sensitive Type Analysis 4 PHP
Build-Type:         Custom
Extra-Source-Files: uuagc_options


Executable osta4php-benchmark
    Main-Is:            Benchmark.hs
    Default-Language:   Haskell98
    Build-Depends:      base          >= 4 && < 5
                      , containers    == 0.5.2.1
                      , cmdargs       >= 0.10.3
                      , process       == 1.1.0.1
                      , directory     == 1.1.0.2
                      , criterion     >= 0.8.0.0
                      , regex-posix   == 0.95.2
                      , deepseq       == 1.3.0.0
                      , MissingH      >= 1.1.1.0
                      , cco           == 0.0.4
                      , mtl           == 2.1.2
                      , text          == 0.11.1.13
                      , attoparsec    == 0.10.4.0
                      , uu-parsinglib == 2.8.1.1
                      , filepath      == 1.3.0.0
    Hs-Source-Dirs:     src/                
    GHC-Options:        -O2 -main-is Benchmark
    Default-Extensions: FlexibleInstances, MultiParamTypeClasses, FlexibleContexts
    Other-Extensions:   GeneralizedNewtypeDeriving, FlexibleContexts
    Other-Modules:      PHP.IR
    GHC-Options:        -O2 -rtsopts
    
Executable osta4php-precision
    Main-Is:            Precision.hs
    Default-Language:   Haskell98
    Build-Depends:      base          >= 4 && < 5
                      , containers    == 0.5.2.1
                      , regex-posix   == 0.95.2
                      , deepseq       == 1.3.0.0
                      , MissingH      >= 1.1.1.0
                      , cco           == 0.0.4
                      , mtl           == 2.1.2
                      , text          == 0.11.1.13
                      , attoparsec    == 0.10.4.0
                      , uu-parsinglib == 2.8.1.1
                      , filepath      == 1.3.0.0
                      , process       == 1.1.0.1
                      , directory     == 1.1.0.2
    Hs-Source-Dirs:     src/
    GHC-Options:        -O2 -main-is Precision
    Default-Extensions: FlexibleInstances, MultiParamTypeClasses, FlexibleContexts
    Other-Extensions:   GeneralizedNewtypeDeriving, FlexibleContexts
    Other-Modules:      PHP.IR
    GHC-Options:        -O2 -rtsopts

Executable osta4php                                           
    Main-Is:            Main.hs
    Default-Language:   Haskell98                                     
    Build-Depends:      base          >= 4 && < 5  
                      , containers    == 0.5.2.1    
                      , filepath      == 1.3.0.0     
                      , mtl           == 2.1.2 
                      , cco           == 0.0.4
                      , uu-parsinglib == 2.8.1.1
                      , attoparsec    == 0.10.4.0     
                      , text          == 0.11.1.13
                      , MissingH      >= 1.1.1.0
                      , uuagc         >= 0.9.39.0
                      , uuagc-cabal   >= 1.0.3.0
                      , cmdargs       >= 0.10.3
                      , deepseq       == 1.3.0.0
                      , regex-posix   == 0.95.2
                      , Cabal         == 1.18.1.2
    Hs-Source-Dirs:     src/    
    Default-Extensions: TypeFamilies, FlexibleInstances, MultiParamTypeClasses, FlexibleContexts
    Other-Extensions:   GeneralizedNewtypeDeriving, FlexibleContexts
    Other-Modules:      PHP.IR
    GHC-Options:        -O2 -rtsopts -prof -auto-all -caf-all

-- Profiling options    
--    GHC-Options:      -O2 -prof -auto-all -caf-all -threaded -rtsopts

    
    