Name:               analyses
Version:            1.0
Cabal-Version:      >= 1.2
Author:             Henk-Erik van der Hoek
Synopsis:           Table Builder 
Description:        Object Sensitive Type Analysis 4 PHP 
Build-Type:         Simple


Executable osta4php-table-builder
    Main-Is:          Main.hs
    Build-Depends:    base          >= 4 && < 5
                    , containers    >= 0.5.2.1
                    , csv           >= 0.1.2
                    , pretty        >= 1.1.1.1
                    , MissingH      >= 1.2.0.2
    Hs-Source-Dirs:   src/